--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,4 +42,5 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 
 #jwt.secret=123456
-#upload.folder = /demo3/files
+upload.folder = /education_center/files
+#TODO check lai folder upload
