Course Controller missing Mail Service
Almost done logic part

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,6 +41,6 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 
-#jwt.secret=123456
+jwt.secret=123456
 upload.folder = /education_center/files
 #TODO check lai folder upload
