Thêm mail service, check status course theo ngay...

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,10 +31,10 @@ spring.servlet.multipart.max-request-size=20MB
 
 #mail server
 spring.mail.host=smtp.gmail.com
-spring.mail.username=huynguyenquang030803@gmail.com
+spring.mail.username=contact.educationcentre2023@gmail.com
 spring.mail.port=587
 #mat khau o day khong phai la mat khau minh hay dung, phai vao gg/myaccount de lay apppassword
-#spring.mail.password=cnoxgnspylsjoxmi
+spring.mail.password=ikmtpipsthxlvrrw
 
 spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.auth=true
@@ -44,3 +44,5 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 jwt.secret=123456
 upload.folder = /education_center/files
 #TODO check lai folder upload
+
+springdoc.api-docs.path=/api-docs
